...
                    // Email Field
                    _buildTextField(
                      _emailController,
                      'Email',
                      Icons.email,
                      false,
                      key: const Key('emailField'),
                    ),
                    const SizedBox(height: 15),

                    // Password Field with Visibility Toggle
                    ValueListenableBuilder(
                      valueListenable: _isPasswordVisible,
...
                        Expanded(
                          child: TextButton(
                            onPressed: () {
                              Navigator.pushNamed(context, '/register');
                            },
                            child: const Text(
                              "Don't have an account? Create here",
                              style: TextStyle(fontSize: 10, color: Colors.black),
                              overflow: TextOverflow.ellipsis,
                              maxLines: 1,
                            ),
                          ),
                        ),
...
                                    height: 20,
                                    child: CircularProgressIndicator(
                                      color: Colors.white,
                                      strokeWidth: 2,
                                    ),
                                  )
                                : const Text('Login', style: TextStyle(fontSize: 18)),
                          ),
                        ),
                      ],
                    ),
                  ],
                ),
...
